--- a/InsuranceStaff/templates/insurancePayments.html
+++ b/InsuranceStaff/templates/insurancePayments.html
@@ -26,7 +26,7 @@
 
             <div class="tab-content">
                 <div id="request" class="tab-pane fade in active">
-                    <h3>Medical Insurance Claims</h3></br>
+                    <h3>Processed Transaction Details</h3></br>
                     <table id="data" class="table table-striped table-bordered compact" cellspacing="0" style="width:100%">
                         <thead>
                         <tr>
@@ -35,7 +35,6 @@
                             <th>Last Name</th>
                             <th>Policy Name</th>
                             <th>Claim Amount</th>
-                            <th>Claim Status</th>
                             <th>Transaction Status</th>
                             <th>Transaction ID</th>
                            
@@ -50,7 +49,6 @@
                             <td width="10%">{{a.policy_name}}</td>
                             <td width="10%">{{a.claim_amt}}</td>
                             <td width="10%">{{a.claim_status}}</td> 
-                            <td width="10%">{{a.claim_transaction_status}}</td> 
                             <td width="10%">{{a.claim_transaction_id}}</td> 
           
                         </tr>
