--- a/InsuranceStaff/templates/navbarInsurance.html
+++ b/InsuranceStaff/templates/navbarInsurance.html
@@ -82,7 +82,7 @@
           </li>
         
           <li class="nav-item">
-            <a href="" class="nav-link">
+            <a href="/insurance/insurancePayments" class="nav-link">
                 <i class="nav-icon fas fa-exchange-alt"></i>
                   <p> Payments and Transactions </p>
             </a>
