--- a/Patients/templates/navbar.html
+++ b/Patients/templates/navbar.html
@@ -93,7 +93,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link">
+            <a href="/patient/patientPayment/{{id}}" class="nav-link">
                 <i class="nav-icon fas fa-exchange-alt"></i>
                   <p> Payments and Transactions </p>
             </a>
