--- a/Patients/templates/patientPayment.html
+++ b/Patients/templates/patientPayment.html
@@ -1,4 +1,4 @@
-{% include 'navbarInsurance.html' %}
+{% include 'navbar.html' %}
 
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -23,37 +23,38 @@
             </ul>
             {% endif %}
 
-
+            <ul class="nav nav-tabs">
+                <li class="active"><a data-toggle="tab" href="#request">Insurance Transactions</a></li>
+                <li><a data-toggle="tab" href="#view">Appointment Transactions</a></li>
+            </ul>
             <div class="tab-content">
                 <div id="request" class="tab-pane fade in active">
-                    <h3>Medical Insurance Claims</h3></br>
+                    <h3>Processed Insurance Transaction Details</h3></br>
                     <table id="data" class="table table-striped table-bordered compact" cellspacing="0" style="width:100%">
                         <thead>
                         <tr>
-                            <th>Patient ID</th>
                             <th>First Name</th>
                             <th>Last Name</th>
                             <th>Policy Name</th>
                             <th>Claim Amount</th>
-                            <th>Claim Status</th>
                             <th>Transaction Status</th>
                             <th>Transaction ID</th>
                            
                         </tr>
                         </thead>
                         <tbody>
-                        {%for a in appDetails%}
+                        {%for a in detail%}
+                        {%if a.claim_transaction_status == 'Done'%}
                         <tr>
-                            <td width="5%">{{a.patient_id}}</td>
                             <td width="10%">{{a.patient_firstname}}</td>
                             <td width="10%">{{a.patient_lastname}}</td>
                             <td width="10%">{{a.policy_name}}</td>
                             <td width="10%">{{a.claim_amt}}</td>
-                            <td width="10%">{{a.claim_status}}</td> 
                             <td width="10%">{{a.claim_transaction_status}}</td> 
                             <td width="10%">{{a.claim_transaction_id}}</td> 
           
                         </tr>
+                        {%endif%}
                         {%endfor%}
                         </tbody>
                     </table>
@@ -61,6 +62,44 @@
 
                 </div>
               
+            
+            <div id="view" class="tab-pane fade">
+                <h3>Processed Appointment Transaction Details</h3>
+                <table id="data" class="table table-striped table-bordered compact" cellspacing="0" style="width:100%">
+                    <thead>
+                    <tr>
+                        <th>Appointment ID</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Appointment With</th>
+                        <th>Requested Date</th>
+                        <th>Transaction Amt</th>
+                        <th>Transaction Status</th>
+                        <th>Transaction ID</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {%for a in appDetails%}
+                    {%if a.transaction_status == 'Done'%}
+                    <tr>
+                        <td width="5%">{{a.appointment_id}}</td>
+                        <td width="10%">{{a.first_name}}</td>
+                        <td width="10%">{{a.last_name}}</td>
+                        <td width="10%">{{a.doctor_id}}</td>
+                        <td width="10%">{{a.requested_date}}</td>
+                        <td width="10%">$30</td>  
+                        <td width="10%">{{a.transaction_status}} </td>
+                        <td width="10%">{{a.transaction_id}} </td>
+
+
+                    </tr>
+                    {%endif%}
+                    {%endfor%}
+                    </tbody>
+                </table>
+    
+                <p> </p>
+            </div>
             </div>
         </div>
 
