--- a/Admin/templates/adminNavbar.html
+++ b/Admin/templates/adminNavbar.html
@@ -66,7 +66,7 @@
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
                         data-accordion="false">
                         <li class="nav-item">
-                            <a href="/adminHome" class="nav-link">
+                            <a href="/admin/adminHome" class="nav-link">
                                 <i class="nav-icon fas fa-home"></i>
                                 <p>Home</p>
                             </a>
@@ -78,20 +78,20 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/labStaff/viewRequests" class="nav-link">
-                                <i class="nav-icon fas fa-tasks" aria-hidden="true"></i>
+                            <a href="/admin/showInternalFiles" class="nav-link">
+                                <i class="nav-icon fas fa-copy" aria-hidden="true"></i>
                                 <p>Internal files</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/labStaff/viewRequests" class="nav-link">
-                                <i class="nav-icon fas fa-tasks" aria-hidden="true"></i>
+                            <a href="/admin/appointmentTransactionRequests" class="nav-link">
+                                <i class="nav-icon fas fa-exchange-alt" aria-hidden="true"></i>
                                 <p>Transaction requests</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/labStaff/viewRequests" class="nav-link">
-                                <i class="nav-icon fas fa-tasks" aria-hidden="true"></i>
+                            <a href="/admin/showLogFiles" class="nav-link">
+                                <i class="nav-icon fas fa-file" aria-hidden="true"></i>
                                 <p>Log files</p>
                             </a>
                         </li>
