--- a/Admin/templates/editEmployeeRecords.html
+++ b/Admin/templates/editEmployeeRecords.html
@@ -44,6 +44,7 @@
                             <th>Employee ID</th>
                             <th>Employee name</th>
                             <th>Employee Department</th>
+                            <th>Employee email</th>
                             <th>Action</th>
                         </tr>
                     </thead>
@@ -52,15 +53,14 @@
                         <tr>
                             <td width="5%">{{employee.employee_id}}</td>
                             <td width="10%">{{employee.employee_first_name}} {{employee.employee_last_name}}</td>
+                            <td width="10%">{{employee.employee_email}}</td>
                             <td width="10%">{{employee.employee_dept}}</td>
                             <td width="5%">
                                 <div style="display: flex;">
                                     <a href="/admin/updateEmployeeDetails/{{employee.employee_id}}">
-                                        <!-- <p data-placement="top" data-toggle="tooltip" title="Update"> -->
                                             <button class="btn btn-info btn-xs" data-title="Update" data-toggle="modal"
                                                 data-target="#edit"><span
                                                     class="glyphicon glyphicon-pencil"></span></button>
-                                        <!-- </p> -->
                                     </a>
                                     &nbsp;&nbsp;&nbsp;&nbsp;
                                     <!-- <script>
