--- a/Admin/templates/viewEmployeeRecords.html
+++ b/Admin/templates/viewEmployeeRecords.html
@@ -26,6 +26,7 @@
                             <th>Employee ID</th>
                             <th>Employee name</th>
                             <th>Employee Department</th>
+                            <th>Employee email</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -34,6 +35,7 @@
                             <td width="5%">{{employee.employee_id}}</td>
                             <td width="25%">{{employee.employee_first_name}} {{employee.employee_last_name}}</td>
                             <td width="15%">{{employee.employee_dept}}</td>
+                            <td width="25%">{{employee.employee_email}}</td>
                         </tr>
                         {%endfor%}
                     </tbody>
