--- a/Patients/templates/updateAppointment.html
+++ b/Patients/templates/updateAppointment.html
@@ -1,5 +1,5 @@
 {% include 'navbar.html' %}
-
+{% load encrypt%}
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -35,12 +35,26 @@
                         {%for field in appointmentForm%}
                         {{ field.label_tag }} {{ field }}</br>
                         {%endfor%}
+
+
+                       
+
+                        <select class="form-control" style="margin-block-end: 20px;" name="doctor_id"
+                            style="width:50%; font-size:15px">
+                            <option selected value = "{{docDetail.doctor_id}}"> {{docDetail.doctor_name}} -- {{docDetail.doctor_spec}}</option>
+                            {%for doc in docDetails%}
+                                {% if docDetail.doctor_id != doc.id %}
+                                <option value="{{doc.id}}">{{doc.doctor_name}} -- {{doc.doctor_spec}}</option>
+                                {% endif %}
+                            {%endfor%}
+                        </select>
+
                         <button type="submit" class="btn btn-warning">Update</button>
 
                     </form>
 
                 </div>
-               
+
             </div>
         </div>
 
