--- a/Patients/templates/patientHome.html
+++ b/Patients/templates/patientHome.html
@@ -12,66 +12,37 @@
       <div class="container-fluid">
         <!-- Small boxes (Stat box) -->
         <div class="row">
-          <div class="col-lg-3 col-6">
+          <div class="col-lg-6 col-6">
             <!-- small box -->
             <div class="small-box bg-info">
               <div class="inner">
-                <h3>2</h3>
+                <h3>{{homeInfo.noOfAppointments}}</h3>
 
-                <p>Upcoming Appointments</p>
+                <p>Total Appointments</p>
               </div>
               <div class="icon">
                 <i class="fas fa-stethoscope"></i>
               </div>
-              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
           </div>
           <!-- ./col -->
-          <div class="col-lg-3 col-6">
-            <!-- small box -->
-            <div class="small-box bg-success">
-              <div class="inner">
-                <h3>8</h3>
-
-                <p>Total Visits</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-stats-bars"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
-          <div class="col-lg-3 col-6">
+         
+       
+          <div class="col-lg-6 col-6">
             <!-- small box -->
             <div class="small-box bg-warning">
               <div class="inner">
-                <h3>4</h3>
+                <h3>{{homeInfo.noOfLabRequestsPending}}</h3>
 
                 <p> Test Requests Pending</p>
               </div>
               <div class="icon">
                 <i class="fas fa-heartbeat"></i>
               </div>
-              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
           </div>
           <!-- ./col -->
-          <div class="col-lg-3 col-6">
-            <!-- small box -->
-            <div class="small-box bg-danger">
-              <div class="inner">
-                <h3>1</h3>
-
-                <p> Active Diagnosis</p>
-              </div>
-              <div class="icon">
-                <i class="fas fa-plus-square"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
-          <!-- ./col -->
+          
         </div>
         <!-- /.row -->
         <!-- Main row -->
