--- a/AdminSHS/templates/adminNavbar.html
+++ b/AdminSHS/templates/adminNavbar.html
@@ -66,31 +66,31 @@
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
                         data-accordion="false">
                         <li class="nav-item">
-                            <a href="/admin/adminHome" class="nav-link">
+                            <a href="/adminSHS/adminHome" class="nav-link">
                                 <i class="nav-icon fas fa-home"></i>
                                 <p>Home</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/admin/createEmployeeRecords" class="nav-link">
+                            <a href="/adminSHS/createEmployeeRecords" class="nav-link">
                                 <i class="nav-icon fas fa-tasks" aria-hidden="true"></i>
                                 <p>Employee records</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/admin/showInternalFiles" class="nav-link">
+                            <a href="/adminSHS/showInternalFiles" class="nav-link">
                                 <i class="nav-icon fas fa-copy" aria-hidden="true"></i>
                                 <p>Internal files</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/admin/appointmentTransactionRequests" class="nav-link">
+                            <a href="/adminSHS/appointmentTransactionRequests" class="nav-link">
                                 <i class="nav-icon fas fa-exchange-alt" aria-hidden="true"></i>
                                 <p>Transaction requests</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/admin/showLogFiles" class="nav-link">
+                            <a href="/adminSHS/showLogFiles" class="nav-link">
                                 <i class="nav-icon fas fa-file" aria-hidden="true"></i>
                                 <p>Log files</p>
                             </a>
