--- a/AdminSHS/templates/insuranceTransactionRequests.html
+++ b/AdminSHS/templates/insuranceTransactionRequests.html
@@ -20,8 +20,8 @@
                 }, 2000)
             </script>
             <ul class="nav nav-tabs">
-                <li class="active"><a href="#appointmentTransactionRequests">Appointment requests</a></li>
-                <li><a href="insuranceTransactionRequests.html">Insurance requests</a></li>
+                <li><a href="appointmentTransactionRequests.html">Appointment requests</a></li>
+                <li class="active"><a href="#insuranceTransactionRequests">Insurance requests</a></li>
             </ul>
             <br>
             <br>
@@ -30,7 +30,7 @@
                     <div class="card-header border-0">
                         <div class="card-title">
                             <!-- <i class="far fa-list-ul"></i> -->
-                            <p style="font-size: large;">Appointment Transaction Requests</p>
+                            <p style="font-size: large;">Insurance Transaction Requests</p>
                         </div>
                         <!-- tools card -->
                         <div class="card-tools">
@@ -41,16 +41,17 @@
                         </div>
                         <!-- /. tools -->
                     </div>
-                    <div class="card-body pt-0" id="appointmentTransactionRequests">
+                    <div class="card-body pt-0" id="insuranceTransactionRequests">
                         <ul class="list-group list-group-flush">
-                            {% for request in appointmentTransactions %}
-                            {% if request.transaction_status == "Approved" %}
+                            {% for request in insuranceTransactions %}
+                            {% if request.claim_transaction_status == "Approved" %}
                             <li class="list-group-item">
                                 <div class="row">
                                     <div class="col">
-                                        <p>Patient ID: {{request.patient_id}}</p>
-                                        <p>Patient name: {{request.first_name}}{{request.last_name}}</p>
-                                        </p>
+                                        <p>Patient ID: {{request.patient_id}} </p>
+                                        <p>Patient name: {{request.patient_firstname}} {{request.patient_lastname}}</p>
+                                        <p>Policy name: {{request.policy_name}}  Claim amount: {{request.claim_amt}}</p> 
+                                        <!-- Add maximum coverage here -->
                                     </div>
                                     <div class="col text-right">
                                         <button type="submit" class="btn btn-warning btn-sm" disabled>
@@ -59,10 +60,10 @@
                                         <br>
                                         <br>
                                         <form method="POST" role="form" id="form-client-info"
-                                            action="{% url 'Admin:appointmentTransactionRequests' %}">
+                                            action="{% url 'AdminSHS:insuranceTransactionRequests' %}">
                                             {% csrf_token %}
                                             <button type="submit" class="btn btn-outline-success btn-sm"
-                                                value={{request.appointment_id}} name="approve">
+                                                value={{request.claim_id}} name="approve">
                                                 Approve
                                             </button>
                                         </form>
