--- a/AdminSHS/templates/showLogFiles.html
+++ b/AdminSHS/templates/showLogFiles.html
@@ -25,7 +25,7 @@
                             </div>
                             <div class="col text-right">
                                 <form method="POST" role="form" id="form-client-info"
-                                    action="{% url 'Admin:showLogFiles' %}">
+                                    action="{% url 'AdminSHS:showLogFiles' %}">
                                     {% csrf_token %}
                                     <button id="bold" class="btn btn-outline-info btn-sm" value={{log_file}} name="filename">
                                         <span class='glyphicon glyphicon-new-window'></span>
