Malicious login detection model

--- a/Hospitalportal/templates/Login.html
+++ b/Hospitalportal/templates/Login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" >
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
 form {border: 3px solid #f1f1f1;}
@@ -93,7 +93,7 @@ span.psw {
 </div>
   <div class="container" style="background-color:#f1f1f1">
     <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
+    <p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
   </div>
 </form>
 <form action="Register" method="POST">
