logout back function

--- a/Patients/templates/patientHome.html
+++ b/Patients/templates/patientHome.html
@@ -146,3 +146,13 @@
 
 </body>
 </html>
+
+<script>
+  (function () {
+      window.onpageshow = function(event) {
+          if (event.persisted) {
+              window.location.reload();
+          }
+      };
+  })();
+  </script>
