--- a/Patients/templates/profileUpdateRequest.html
+++ b/Patients/templates/profileUpdateRequest.html
@@ -266,3 +266,13 @@ border-radius:0!important;
 </section>
 </div>
 
+
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
