--- a/Patients/templates/requestLabTests.html
+++ b/Patients/templates/requestLabTests.html
@@ -150,3 +150,14 @@
 </div>
 </section>
 </div>
+
+
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
