--- a/Patients/templates/bookAppointment.html
+++ b/Patients/templates/bookAppointment.html
@@ -142,3 +142,15 @@
 </div>
 </section>
 </div>
+
+
+<script>
+  (function () {
+      window.onpageshow = function(event) {
+          if (event.persisted) {
+              window.location.reload();
+          }
+      };
+  })();
+  </script>
+  
