--- a/Patients/templates/insuranceClaimRequest.html
+++ b/Patients/templates/insuranceClaimRequest.html
@@ -176,3 +176,15 @@
 </div>
 </section>
 </div>
+
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
+
+
