--- a/Patients/templates/patientPayment.html
+++ b/Patients/templates/patientPayment.html
@@ -108,3 +108,13 @@
 </div>
 </section>
 </div>
+
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
