--- a/Patients/templates/updateAppointment.html
+++ b/Patients/templates/updateAppointment.html
@@ -63,3 +63,15 @@
 </div>
 </section>
 </div>
+
+
+
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
