--- a/Patients/templates/viewPrescription.html
+++ b/Patients/templates/viewPrescription.html
@@ -53,3 +53,15 @@
 </section>
 </div>
 
+
+
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
+
