--- a/Doctors/templates/navbardoctors.html
+++ b/Doctors/templates/navbardoctors.html
@@ -81,19 +81,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link">
+            <a href="/doctors/viewLabReports/" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
-                <p> Request Lab Tests</p>
+                <p> View Lab Reports</p>
             </a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link">
-                <i class="nav-icon fas fa-exchange-alt"></i>
-                  <p> Payments and Transactions </p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">
+            <a href="/doctors/logout/{{user}}" class="nav-link">
                 <i class="nav-icon fas fa-sign-out-alt"></i>
                     <p> Sign out</p>
             </a>
