admin encrytion and masking changes

--- a/AdminSHS/templates/updateEmployeeRecords.html
+++ b/AdminSHS/templates/updateEmployeeRecords.html
@@ -25,6 +25,9 @@
                         {{ field.label_tag }} {{ field }}</br>
                         {%endfor%}
                         <br>
+                        ** cannot update email or username
+                        <br>
+                        <br>
                         <button type="submit" class="btn btn-warning">Update</button>
                     </form>
                 </div>  
