--- a/AdminSHS/templates/viewEmployeeRecords.html
+++ b/AdminSHS/templates/viewEmployeeRecords.html
@@ -25,6 +25,7 @@
                         <tr>
                             <th>Employee ID</th>
                             <th>Employee name</th>
+                            <th>Employee username</th>
                             <th>Employee Department</th>
                             <th>Employee email</th>
                         </tr>
@@ -34,6 +35,7 @@
                         <tr>
                             <td width="5%">{{employee.employee_id}}</td>
                             <td width="25%">{{employee.employee_first_name}} {{employee.employee_last_name}}</td>
+                            <td width="15%">{{employee.employee_username}}</td>
                             <td width="15%">{{employee.employee_dept}}</td>
                             <td width="25%">{{employee.employee_email}}</td>
                         </tr>
