--- a/AdminSHS/templates/editEmployeeRecords.html
+++ b/AdminSHS/templates/editEmployeeRecords.html
@@ -1,5 +1,5 @@
 {% include 'adminNavbar.html' %}
-
+{% load encrypt%}
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -26,16 +26,6 @@
                 <li class="active"><a href="#update">Update / Delete employee record</a></li>
             </ul>
             <div id="update">
-                <div class="container-fluid">
-                    <h4>Enter Employee ID:</h4>
-                    <form action="search" method="get" class="d-flex">
-                        <input name="query" type="text" placeholder="Search...">
-                        <button class="btn btn-outline-success" type="submit">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </form>
-                </div>
-                <br>
                 <br>
                 <table id="data" class="table table-striped table-bordered compact" cellspacing="0"
                     style="width:100%">
@@ -43,8 +33,9 @@
                         <tr>
                             <th>Employee ID</th>
                             <th>Employee name</th>
-                            <th>Employee Department</th>
+                            <th>Employee username</th>
                             <th>Employee email</th>
+                            <th>Employee department</th>
                             <th>Action</th>
                         </tr>
                     </thead>
@@ -53,11 +44,13 @@
                         <tr>
                             <td width="5%">{{employee.employee_id}}</td>
                             <td width="10%">{{employee.employee_first_name}} {{employee.employee_last_name}}</td>
+                            <td width="10%">{{employee.employee_username}}</td>
                             <td width="10%">{{employee.employee_email}}</td>
                             <td width="10%">{{employee.employee_dept}}</td>
                             <td width="5%">
                                 <div style="display: flex;">
-                                    <a href="/adminSHS/updateEmployeeDetails/{{employee.employee_id}}">
+
+                                    <a href="/adminSHS/updateEmployeeDetails/update/{{k|patient_id_encrypt_tag:employee.employee_id}}">
                                             <button class="btn btn-info btn-xs" data-title="Update" data-toggle="modal"
                                                 data-target="#edit"><span
                                                     class="glyphicon glyphicon-pencil"></span></button>
@@ -81,7 +74,7 @@
                                           //document.getElementById("demo").innerHTML = text;
                                         }
                                     </script> -->        
-                                    <a href="/adminSHS/updateEmployeeDetails/delete/{{employee.employee_id}}">
+                                    <a href="/adminSHS/updateEmployeeDetails/delete/{{k|patient_id_encrypt_tag:employee.employee_id}}">
                                         <p data-placement="top" data-toggle="tooltip" title="Delete">
                                             {% csrf_token %}
                                             <button class="btn btn-info btn-xs" data-title="Update" data-toggle="modal"
