--- a/Patients/templates/navbar.html
+++ b/Patients/templates/navbar.html
@@ -77,7 +77,7 @@
             </a>
           </li>
           <li class="nav-item">
-           <a href="/patient/insuranceClaimRequest/{{id}}" class="nav-link">
+           <a href="/patient/insuranceClaimRequest/{{k|patient_id_encrypt_tag:id}}" class="nav-link">
                 <i class="nav-icon fas fa-medkit"></i>
                     <p> Insurance Claim </p>
             </a>
